# tardis-fuzz

./: Cargo.toml  README.md
src/: fuzzer.rs  main.rs  vmm.rs
src/fuzzer/: executor.rs  fuzzer.rs
src/vmm/: aarch64.rs  bits.rs  coverage.rs  devices.rs  fdt.rs  memory.rs  setup.rs  snapshot.rs
src/vmm/devices/: rtc.rs  serial.rs
